# nibbana-the-mind-stilled

./: .gitignore  404.html  LICENSE.txt  Makefile  README.md  abbreviations.html  about-the-author.html  about-the-knssb.html  anecdote.cls  book-epub.toml  book-html.toml  book.toml  by-the-same-author.html  copyright.html  cover-part-N-spread.tex  dedication-anumodana.html  hyphenation.tex  index.html  introduction.html  local.sty  main-part-1.tex  main-part-2.tex  main.tex  print.html  pyproject.toml  sermon-01.html  sermon-02.html  sermon-03.html  sermon-04.html  sermon-05.html  sermon-06.html  sermon-07.html  sermon-08.html  sermon-09.html  sermon-10.html  sermon-11.html  sermon-12.html  sermon-13.html  sermon-14.html  sermon-15.html  (+21 more)
assets/images/: sinhala-titles.odt
assets/sass/: _base.sass  output-epub.sass  output-html.sass
assets/stylesheets/: output-epub.css  output-html.css
helpers/: convert_references.py  dist.sh  ebooks.sh  generate_header_images.py  generate_part_covers.sh  pts_to_sc.tsv  rezip.sh  unwrap_markdown_chapters.sh
manuscript/html/: convert.py  get_names.py  names.txt  nibbana-utf-8.html  nibbana.md  update_quote_marks.py
manuscript/markdown/: SUMMARY.md  abbreviations.md  about-the-author.md  about-the-knssb.md  by-the-same-author.md  copyright.md  dedication-anumodana.md  introduction.md  sermon-01.md  sermon-02.md  sermon-03.md  sermon-04.md  sermon-05.md  sermon-06.md  sermon-07.md  sermon-08.md  sermon-09.md  sermon-10.md  sermon-11.md  sermon-12.md  sermon-13.md  sermon-14.md  sermon-15.md  sermon-16.md  sermon-17.md  sermon-18.md  (+17 more)
(+44 files in other folders)
