[tool.poetry]
name = "nibbana-the-mind-stilled-main"
version = "0.1.0"
description = ""
authors = ["Gambhiro <gambhiro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.1.0"
pytweening = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
